--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,13 +1,2 @@
-# VecCoreLib tests
-
-#add_executable(test1 test1.cc)
-#add_executable(test2 test2.cc)
-
-if(DEFINED VecCore_LIBRARIES)
-#  target_link_libraries(test1 ${VecCoreLib_LIBRARIES})
-#  target_link_libraries(test2 ${VecCoreLib_LIBRARIES})
-endif()
-
-if (VECRNG)
-  add_subdirectory(rng)
-endif()
+add_subdirectory(MathTest)
+add_subdirectory(RngTest)
