--- a/cmake/VecCoreLibConfig.cmake.in
+++ b/cmake/VecCoreLibConfig.cmake.in
@@ -16,3 +16,10 @@ endif()
 check_required_components(VecCoreLib)
 
 include(${CMAKE_CURRENT_LIST_DIR}/VecCoreLibTargets.cmake)
+
+#for old cmake support
+if(VecCoreLib_FOUND)
+  set(VecCoreLib_INCLUDE_DIRS ${VecCoreLib_INCLUDE_DIR} ${VecCore_INCLUDE_DIRS})
+  set(VecCoreLib_DEFINITIONS ${VecCore_DEFINITIONS})
+  set(VecCoreLib_LIBRARIES ${VecCore_LIBRARIES})
+endif()
