Update VecCore, README

--- a/cmake/VecCoreLibConfig.cmake.in
+++ b/cmake/VecCoreLibConfig.cmake.in
@@ -4,8 +4,8 @@ set_and_check(VecCoreLib_INCLUDE_DIR "@PACKAGE_VecCoreLib_INSTALL_INCLUDEDIR@")
 set(VecCoreLib_FOUND True)
 
 
-set(VecCore_FOUND True) #temporary
-find_package(VecCore @VecCore_VERSION@ REQUIRED COMPONENTS ${VecCoreLib_FIND_COMPONENTS}) #should be fixed for QUIET, etc
+include(CMakeFindDependencyMacro)
+find_dependency(VecCore @VecCore_VERSION@ REQUIRED COMPONENTS ${VecCoreLib_FIND_COMPONENTS})
 
 if(VecCore_FOUND)
 foreach(backend ${VecCoreLib_FIND_COMPONENTS})
