--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -1,9 +1,9 @@
-# VecCoreLib Benchmarks
+# VecMath Benchmarks
 
 #add_executable(benchmark1 benchmark1.cc)
 #add_executable(benchmark2 benchmark2.cc)
 
 if(DEFINED VecCore_LIBRARIES)
-#  target_link_libraries(benchmark1 ${VecCoreLib_LIBRARIES})
-#  target_link_libraries(benchmark2 ${VecCoreLib_LIBRARIES})
+#  target_link_libraries(benchmark1 ${VecMath_LIBRARIES})
+#  target_link_libraries(benchmark2 ${VecMath_LIBRARIES})
 endif()
