--- a/test/RngTest/CMakeLists.txt
+++ b/test/RngTest/CMakeLists.txt
@@ -89,7 +89,7 @@ include_directories(SYSTEM ${VecCore_INCLUDE_DIRS})
 set(RNGTEST_DEFINITIONS "${RNGTEST_DEFINITIONS} ${VecCore_DEFINITIONS}")
 set(RNGTEST_DEFINITIONS "${RNGTEST_DEFINITIONS} -DRNGTEST_${_BACKEND_UP}")
 set(RNGTEST_EXTERNAL_INCLUDES "${RNGTEST_EXTERNAL_INCLUDES};${VecCore_INCLUDE_DIRS}")
-set(RNGTEST_LIBRARIES_EXTERNAL ${RNGTEST_LIBRARIES_EXTERNAL} ${VecCore_LIBRARIES} VecCoreLib)
+set(RNGTEST_LIBRARIES_EXTERNAL ${RNGTEST_LIBRARIES_EXTERNAL} ${VecCore_LIBRARIES} VecMath)
 
 ################################################################################
 
